[package]
name = "neural-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
html2text = "0.5.1"
pdf-extract = "0.6.4"
reqwest = { version = "0.11.16", features = ["blocking"] }
