[package]
name = "neural-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-openai = "0.10.2"
bytes = "1.4.0"
dotenvy = "0.15.7"
html2text = "0.5.1"
pdf-extract = "0.6.4"
qdrant-client = "1.1.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
tonic = "0.9.1"
